unpackaged/main/default/objects/MyCase_Billing_Item__c/MyCase_Billing_Item__c.object-meta.xml
<CustomObject>
    <description>Custom object to store zuora rate plans for automation between salesforce and zuora</description>
    <label>MyCase Billing Item</label>
    <nameField>
        <displayFormat>MBI-{0000}</displayFormat>
        <label>MyCase Billing Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MyCase Billing Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>