unpackaged/main/default/objects/MyCase_Billing_Item__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRUE if rate plan is currently active in Zuora</description>
    <inlineHelpText>TRUE if rate plan is currently active in Zuora</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>