unpackaged/main/default/objects/MyCase_Billing_Item__c/fields/Billing_Periods__c.field-meta.xml
<CustomField>
    <fullName>Billing_Periods__c</fullName>
    <label>Billing Periods</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>