unpackaged/main/default/objects/MyCase_Billing_Item__c/fields/Charge_Name__c.field-meta.xml
<CustomField>
    <fullName>Charge_Name__c</fullName>
    <label>Charge Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>