unpackaged/main/default/objects/MyCase_Billing_Item__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Discount</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>