unpackaged/main/default/objects/MyCase_Billing_Item__c/fields/Discount_Display__c.field-meta.xml
<CustomField>
    <fullName>Discount_Display__c</fullName>
    <formula>CASE( Discount_Model__c,

&quot;Fixed&quot;, &quot;$&quot;&amp;TEXT(ROUND(Discount__c,0)),

TEXT(ROUND(Discount__c,0))&amp;&quot;%&quot;

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Display</label>
    <type>Text</type>
</CustomField>