unpackaged/main/default/objects/MyCase_Billing_Item__c/fields/Discount_Model__c.field-meta.xml
<CustomField>
    <fullName>Discount_Model__c</fullName>
    <label>Discount Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>