unpackaged/main/default/objects/MyCase_Billing_Item__c/fields/Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount_Type__c</fullName>
    <description>Type of discount extended to customer</description>
    <label>Discount Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Association</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>