unpackaged/main/default/objects/MyCase_Billing_Item__c/fields/Rate_Plan_Charge_Id__c.field-meta.xml
<CustomField>
    <fullName>Rate_Plan_Charge_Id__c</fullName>
    <description>Rate plan charge external Id in Zuora</description>
    <label>Rate Plan Charge Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>