unpackaged/main/default/objects/MyCase_Billing_Item__c/fields/Rate_Plan_Id__c.field-meta.xml
<CustomField>
    <fullName>Rate_Plan_Id__c</fullName>
    <description>Product Rate Plan external Id in Zuora</description>
    <label>Rate Plan Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>